plugins/rhizomedb/testData/firMembers/entityType/withoutCompanion/noEidConstructor.kt
// File generated by `org.jetbrains.rhizomedb.TestGeneratorKt`. DO NOT MODIFY MANUALLY
import com.jetbrains.rhizomedb.*

<!WRONG_ENTITY_TYPE_TARGET("target should have from EID constructor")!>@GeneratedEntityType<!>
data class MyEntity(override val eid: EID, val data: Any) : Entity

fun foo() {
    MyEntity.all()
    MyEntity.single()
    MyEntity.singleOrNull()
}
